### Removed
- [TESTS] Remove old 'testing' folder
### Changed
- [SYSTEM] [SETTINGS] Use Hostname value from Django settings
### Fixed
- [SYSTEM] [MONGODB] Always refer to settings to connect to mongodb
- [API_PARSER] [WAF_CLOUDFLARE] Fix invalid time range requested for UTC-* consoles
- [API_PARSER] [WAF_CLOUD_PROTECTOR] Catch invalid lines + fix timestamp handling
- [SYSTEM] [PKI] Missing SAN


## [2.22.2] - 2025-03-17
### Added
- [API_PARSER] Add loggers before the requests to make easier the debugging
- [API_PARSER] [VARONIS] New collector
### Changed
- [API_PARSER] [CISCO_MERAKI] Change common logger to warn instead of error
- [API_PARSER] [CORTEX_XDR] Use the 'local_insert_ts' field as time field for alerts
- [API_PARSER] [CORTEX_XDR] Bound requests with a 'to' parameter
### Fixed
- [API_PARSER] [CISCO_MERAKI] Fix bug when 'get_security_logs' is False
- [API_PARSER] [BEYONDTRUST_REPORTINGS] 'since' going up infinitely in some cases
- [API_PARSER] [BEYONDTRUST_REPORTINGS] Ensure at least on type of logs is fetched in parameters
- [API_PARSER] [NETSKOPE] Reduce time ranges to 10 minutes max to avoid overflow in queries
- [API_PARSER] [CORTEX_XDR] Avoid missing logs when fetching pages by changing the 'since' filter
- [API_PARSER] [CORTEX_XDR] Avoid missing first log of each next page in queries
- [API_PARSER] [CORTEX_XDR] Avoid getting multiple times the same event during consecutive runs


## [2.22.1] - 2025-03-03
### Fixed
- [API_PARSER] [NETSKOPE] Correctly update the last_collected_timestamp, even when no logs are received
- [API_PARSER] [CYBEREASON] Avoid None evaluation of log objects in format_log for malops
- [API_PARSER] [CROWDSTRIKE] Fix infinite loop when we encounters more than 100 logs (default limit) in one request
- [API_PARSER] [PROOFPOINT_TRAP] Handle and avoid request timeouts by progressively reducing queries range


## [2.22.0] - 2025-02-25
### Added
- [SERVICE] [FILEBEAT] Support new rc calls to check services separatly
### Fixed